--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style/style.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <header class="header">
@@ -42,15 +43,16 @@
     </header>
 
     <div class="hero-container">
-      <div class="announcement">
-        <div href="#" class="announcement-btn"><p>Announcing Early Adopters Plan</p> 
-        
-        <img src="img/arrow.png" alt="arrow" width="20px"/>
-    </div>
+      <div class="announcement"  data-aos="fade-right" data-aos-duration="2000">
+        <div href="#" class="announcement-btn">
+          <p>Announcing Early Adopters Plan</p>
+
+          <img src="img/arrow.png" alt="arrow" width="20px" />
+        </div>
       </div>
-      <div class="hero-content">
+      <div class="hero-content" data-aos="fade-down" data-aos-duration="2000">
         <p class="heading">Run your business smarter.</p>
-        <p class="para">
+        <p class="para" style="margin-top: 1rem;">
           Midday provides you with greater insight into your business and
           automates the boring tasks, allowing you to focus on what you love to
           do instead.
@@ -62,7 +64,7 @@
         <p class="no-credit">No credit card required.</p>
       </div>
 
-      <div class="hero-img">
+      <div class="hero-img" data-aos="zoom-in"  data-aos-duration="3000">
         <img class="blur1" src="img/blur.png" alt="hero image" />
         <img class="blur2" src="img/blur.png" alt="hero image" />
         <img
@@ -81,41 +83,54 @@
               src="img/social-1.png"
               alt="instagram"
               style="width: 40px; height: 40px"
+              data-aos="flip-left"
+              data-aos-duration="4000"
+              
             />
             <img
               src="img/socail-2.png"
               alt="facebook"
               style="width: 40px; height: 40px"
+              data-aos="flip-right"
+              data-aos-duration="4000"
             />
             <img
               src="img/social-3.png"
               alt="facebook"
               style="width: 40px; height: 40px"
+              data-aos="flip-left"
+              data-aos-duration="4000"
             />
             <img
               src="img/social-4.png"
               alt="facebook"
               style="width: 40px; height: 40px"
+              data-aos="flip-right"
+              data-aos-duration="4000"
             />
             <img
               src="img/social-5.png"
               alt="facebook"
               style="width: 40px; height: 40px"
+              data-aos="flip-left"
+              data-aos-duration="4000"
             />
             <img
               src="img/social-6.png"
               alt="facebook"
               style="width: 40px; height: 40px"
+              data-aos="flip-right"
+              data-aos-duration="4000"
             />
           </div>
         </div>
       </div>
 
-      <div class="hero-content" style="margin-top: 6rem;">
-        <p class="heading" style="font-size: 96px; margin: 2.5rem 0;">
+      <div class="hero-content" style="margin-top: 6rem">
+        <p class="heading" style="font-size: 96px; margin: 2.5rem 0" data-aos="fade-right" data-aos-duration="2000">
           Save hours.
         </p>
-        <p class="para" style="max-width: 778px;">
+        <p class="para" style="max-width: 778px" data-aos="fade-left" data-aos-duration="2000">
           From automated receipt-to-transaction mapping to conversing with your
           financials and consolidating all your files, Midday not only assists
           you with your most tiresome business tasks but also enhances your
@@ -125,46 +140,52 @@
     </div>
 
     <section class="bottom-section">
-        <div class="content">
-          <img src="/img/back.png"  style="max-width: 650px; max-height: 330px; width: 100%; height: 100%;"  />
-          <div class="content-text">
-            <h4>Financial overview</h4>
-            <p>
-              Bring your own bank. We connect to over 20 000+ banks in 33
-              countries across US, Canada, UK and Europe. Keep tabs on your
-              expenses and income, and gain a clearer picture of your business's
-              financial track record and current situation.
-            </p>
-            <div class="list">
-              <svg
-                width="19"
-                height="14"
-                viewBox="0 0 19 14"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <g clip-path="url(#clip0_1_1056)">
-                  <path
-                    d="M7.15166 13.5001L1.45166 7.8001L2.87666 6.3751L7.15166 10.6501L16.3267 1.4751L17.7517 2.9001L7.15166 13.5001Z"
-                    fill="#FAFAFA"
+      <div class="content">
+        <img
+          src="/img/back.png"
+          style="max-width: 650px; max-height: 330px; width: 100%; height: 100%"
+          alt="bottom image"
+          data-aos="zoom-in"
+          data-aos-duration="3000"
+        />
+        <div class="content-text" data-aos="fade-right" data-aos-duration="2000">
+          <h4>Financial overview</h4>
+          <p>
+            Bring your own bank. We connect to over 20 000+ banks in 33
+            countries across US, Canada, UK and Europe. Keep tabs on your
+            expenses and income, and gain a clearer picture of your business's
+            financial track record and current situation.
+          </p>
+          <div class="list">
+            <svg
+              width="19"
+              height="14"
+              viewBox="0 0 19 14"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g clip-path="url(#clip0_1_1056)">
+                <path
+                  d="M7.15166 13.5001L1.45166 7.8001L2.87666 6.3751L7.15166 10.6501L16.3267 1.4751L17.7517 2.9001L7.15166 13.5001Z"
+                  fill="#FAFAFA"
+                />
+              </g>
+              <defs>
+                <clipPath id="clip0_1_1056">
+                  <rect
+                    width="18"
+                    height="13"
+                    fill="white"
+                    transform="translate(0.601562 0.5)"
                   />
-                </g>
-                <defs>
-                  <clipPath id="clip0_1_1056">
-                    <rect
-                      width="18"
-                      height="13"
-                      fill="white"
-                      transform="translate(0.601562 0.5)"
-                    />
-                  </clipPath>
-                </defs>
-              </svg>
-              <span>Share financial reports</span>
-            </div>
+                </clipPath>
+              </defs>
+            </svg>
+            <span>Share financial reports</span>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
     <script>
       document
@@ -172,6 +193,10 @@
         .addEventListener("click", () => {
           document.querySelector(".mob-menu").classList.toggle("active");
         });
+    </script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
     </script>
   </body>
 </html>
